Fix searchbar alignment with cards

--- a/src/styles/quasar.styl
+++ b/src/styles/quasar.styl
@@ -63,6 +63,5 @@ a.router-link-active {
 .query{
 @media only screen and (max-width: 768px) {
   padding-top:0;
-  border-bottom: 1px solid #E0E0E0;
   }
 }
